k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vahiztech
  labels:
    app.kubernetes.io/name: vahiztech
    app.kubernetes.io/part-of: vahiztech-ecosystem
